--- a/.base.elegrp.dtr10_dtr30_template.yaml
+++ b/.base.elegrp.dtr10_dtr30_template.yaml
@@ -11,7 +11,7 @@ esphome:
   friendly_name: ${device_friendly_name}
   project:
     name: "elegrp.DTR10-DTR30"
-    version: "1.6"
+    version: "1.7"
   on_boot:
     then:
       - delay: 3s
@@ -59,7 +59,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   # Power save on LibreTiny is boolean so HIGH or LIGHT have the same effect
-  power_save_mode: HIGH
+  power_save_mode: NONE
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
